# pixoo-bridge.rs

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_REVIEW.md  CODE_REVIEW_CLAUDE_OPUS_4_5_v0.6.0.md  CODE_REVIEW_CLAUDE_OPUS_4_6_v0.10.0.md  CODE_REVIEW_GEMINI_3_PRO_v0.7.0.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  RELEASE_SETUP.md  REVIEW.md  TODO.md  docker-compose.yaml  release-please-config.json
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-release.yml  release-please.yml
.opencode/command/: create-branch-commit.md  opsx-bulk-archive.md
.opencode/skills/openspec-bulk-archive-change/: SKILL.md
openspec/: config.yaml  project.md
openspec/changes/add-device-settings-endpoints/: design.md  proposal.md  tasks.md
openspec/changes/add-display-endpoints/: design.md  proposal.md  tasks.md
openspec/changes/add-draw-fill-endpoint/: tasks.md
openspec/changes/add-foundation-ci-flow/: design.md  proposal.md  tasks.md
openspec/changes/add-more-manage-commands/: proposal.md  tasks.md
openspec/changes/add-openapi-swagger-docs/: design.md  tasks.md
openspec/changes/add-tools-endpoints/: proposal.md  tasks.md
openspec/changes/archive/2026-01-25-add-foundation-ci-flow/: proposal.md
openspec/changes/clippy-pedantic-standard/: design.md  proposal.md  tasks.md
openspec/changes/device-sysreboot-command/: design.md  proposal.md  tasks.md
openspec/changes/draw-upload-endpoint/: design.md  tasks.md
openspec/changes/improve-github-actions/: design.md  proposal.md  tasks.md
openspec/changes/log-on-start-and-errors/: design.md  proposal.md  tasks.md
openspec/changes/manage-api-endpoints/: tasks.md
openspec/changes/more-granular-http-status-codes/: design.md  proposal.md  tasks.md
openspec/changes/pixoo-health-forward/: design.md  proposal.md
openspec/changes/tools-validation-enhancements/: design.md  tasks.md
openspec/changes/unify-error-envelope/: proposal.md  tasks.md
openspec/specs/api/: spec.md
openspec/specs/api-common/: spec.md
openspec/specs/api-docs/: spec.md
openspec/specs/bridge-foundation/: spec.md
openspec/specs/core/: spec.md
openspec/specs/core-github-workflows/: spec.md
openspec/specs/core-logging/: spec.md
openspec/specs/core-pixoo-client/: spec.md
openspec/specs/core-server/: spec.md
openspec/specs/pixoo-http-client/: spec.md
src/: config.rs  draw.rs  lib.rs  main.rs  openapi.rs  pixoo_proto.rs  remote.rs  request_id.rs  request_tracing.rs  state.rs  transport.rs
src/bridge/: mod.rs  routes.rs
src/bridge/draw/: controller.rs  mod.rs  routes.rs  service.rs
src/bridge/system/: routes.rs  service.rs
src/client/: command_type.rs  mod.rs
src/core/: http_error_mapping.rs  mod.rs
src/pixels/: canvas.rs  encoding.rs  imaging.rs  mod.rs
src/pixoo/: client.rs  command.rs  error.rs  fields.rs  mod.rs
src/request_tracing/: mod.rs  propagate.rs  request_id.rs
src/routes/: common.rs  draw.rs  manage.rs  mod.rs  system.rs  tools.rs
src/routes/manage/: display.rs  mod.rs  time.rs  weather.rs
(+141 files in other folders)
