[package]
name = "pixoo-bridge"
version = "0.5.0"
edition = "2021"
description = "HTTP bridge for Pixoo LED matrix devices"
authors = ["pixoo-bridge maintainers"]
license = "MIT"
repository = "https://github.com/axel-linux/pixoo-bridge.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
httpmock = "0.8"
tower = "0.5"

[[bin]]
name = "pixoo-bridge"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
