[package]
name = "pixoo-bridge"
version = "0.7.0"
edition = "2021"
description = "HTTP bridge for Pixoo LED matrix devices"
authors = ["pixoo-bridge maintainers"]
license = "AGPL-3.0"
repository = "https://github.com/axel-linux/pixoo-bridge.rs"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
# Style preferences
must_use_candidate = "allow"
module_name_repetitions = "allow"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
chrono = { version = "0.4", features = ["alloc"] }
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
httpmock = "0.8"

[[bin]]
name = "pixoo-bridge"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
